#	$Id$	

Changelog since HylaFAX 4.3.3

* Stop caching of DATE and VERSION by configure (Bug 854) (9 Mar 2007)

Changelog for HylaFAX 4.3.3

* Allow multiple FILETYPE (28 Feb 2007)
* Fix faxq seqfault when syslogging strings containing %s, etc (28 Feb 2007)
* Fix broken SNPP authentication (Bug 851) (28 Feb 2007)
* Remove unused CHARSET setting (bug 843) (23 Feb 2007)
* Include jobtag in Subject of notification emails (bug 850) (22 Feb 2007)
* Correctly named notify "rejected" templates (bug 849) (20 Feb 2007)
* Make ConverFile return filename even for noop on PDF files (20 Feb 2007)

Changelog for HylaFAX 4.3.2

* Encode subject headers (using B encoding) when necessary (9 Feb 2007)
* Added sample HTML templates to demonstrate templating features (9 Feb 2007)
* Added error exit codes to faxinfo (7 Feb 2007)
* PAM reworked to use complete sessions independantly (25 Jan 2007)
* Added debian/ directory with rules to create a simple Debian package (21 Jan 2007)
* Simplify/Unify mime encoder selection and use (9 Jan 2007/29 Jan 2007)
* Add the Include: option for Config file options (8 Jan 2007)
* Redirected unwanted output from pd2pdf while running notify (24 Dec 2006)
* Use @SCRIPT_SH@ for bin/ scripts to allow configure selection (23 Dec 2006)
* Updated pollrcvd to use templates (22 Dec 2006)
* Moved default templates to etc/tempates/en/ to clean up etc/templates/ (22 Dec 2006)

Changelog for HylaFAX 4.3.1

* Added exit codes to faxalter (Bug 796) (4 Dec 2006)
* Fixed faxqclean to work correctly with cover documents using the new naming
  scheme, yet still work with previously named documents (bug 831) (20 Nov 2006)
* Fixed sendfax PDF page counting (bug 830) (13 Nov 2006)
* Disable JPEG support when compiling with older libtiff (3 Nov 2006)
* Use old style lock files for OpenServer 6 (20 Oct 2006)
* Always update on-disk qfiles for jobs when state changes to running (19 Oct 2006)
* Change how we compile shared objects for Solaris DSO support (12 Oct 2006)