@@ -32,6 +32,7 @@ Class2Modem::Class2Modem(FaxServer& s, const ModemConfig& c) : FaxModem(s,c)
 {
     hangupCode[0] = '\0';
     serviceType = 0;			// must be set in derived class
+    useExtendedDF = false;		// T.32 Amendment 1 extension for data format is detectable
 }
 
 Class2Modem::~Class2Modem()
@@ -373,11 +374,12 @@ Class2Modem::setupDCC()
     params.br = getBestSignallingRate();
     params.wd = getBestPageWidth();
     params.ln = getBestPageLength();
-    params.df = getBestDataFormat();
+    params.df = useExtendedDF ? modemParams.df : getBestDataFormat();
+    params.df &= ~BIT(DF_JBIG);		// let's not actually do JBIG yet
     params.ec = getBestECM();
     params.bf = BF_DISABLE;
     params.st = getBestScanlineTime();
-    return class2Cmd(dccCmd, params);
+    return class2Cmd(dccCmd, params, true);
 }
 
 /*
@@ -410,18 +412,41 @@ Class2Modem::parseClass2Capabilities(const char* cap, Class2Params& params, bool
 	params.br = fxmin(params.br, (u_int) BR_33600);
 	params.wd = fxmin(params.wd, (u_int) WD_A3);
 	params.ln = fxmin(params.ln, (u_int) LN_INF);
-	params.df = fxmin(params.df, (u_int) DF_2DMMR);
-	/*
-         * Table 21 T.32 does not match Table 2 T.30 very well in some aspects.
-	 * Data format is one of those things.  When dealing with DIS we use DF 
-	 * as a bitmap to suit T.30, but a T.32-following modem will only report 
-	 * one supported receiver format (and not all of them).  Thus when 
-	 * parsing T.32 DIS we must convert the modem response to a bitmap.  
-	 * However, due to the inconguency between T.30 and T.32 the bitmap will 
-	 * only contain the the reported format and the required format.
-	 */
-	if (isDIS) {
-	    params.df = BIT(params.df) | BIT(DF_1DMH);
+	if (useExtendedDF) {
+	    /*
+	     * The T.32-A1 DF extension presents us with a bitmap-like presentation
+	     * similar to VR here... but leaves 2D-MMR = 3 for backwards-compatibility.
+	     *
+	     * 0 = 1D-MH, 1 = 2D-MR, 3 = 2D-MMR, 4 = JBIG-L0, 8 = JBIG
+	     */
+	    u_int dfscan = params.df;
+	    if (isDIS) {
+		params.df = BIT(DF_1DMH);
+		if (dfscan & 0x1) params.df |= BIT(DF_2DMR);
+		if (dfscan & 0x2) params.df |= BIT(DF_2DMMR);	// don't require MR for MMR
+		if (dfscan & 0x4) params.df |= BIT(DF_JBIG);	// JBIG L0 is JBIG to us
+		if (dfscan & 0x8) params.df |= BIT(DF_JBIG);
+	    } else {
+		params.df = DF_1DMH;
+		if (dfscan & 0x3) params.df = DF_2DMMR;
+		else if (dfscan & 0x1) params.df = DF_2DMR;
+		else if (dfscan & 0x4) params.df = DF_JBIG;	// JBIG L0 is JBIG to us
+		else if (dfscan & 0x8) params.df = DF_JBIG;
+	    }
+	} else {
+	    params.df = fxmin(params.df, (u_int) DF_2DMMR);
+	    /*
+	     * Table 21 T.32 does not match Table 2 T.30 very well in some aspects.
+	     * Data format is one of those things.  When dealing with DIS we use DF 
+	     * as a bitmap to suit T.30, but a T.32-following modem will only report 
+	     * one supported receiver format (and not all of them).  Thus when 
+	     * parsing T.32 DIS we must convert the modem response to a bitmap.  
+	     * However, due to the inconguency between T.30 and T.32 the bitmap will 
+	     * only contain the the reported format and the required format.
+	     */
+	    if (isDIS) {
+		params.df = BIT(params.df) | BIT(DF_1DMH);
+	    }
 	}
 	if (params.ec > EC_ECLFULL)		// unknown, disable use
 	    params.ec = EC_DISABLE;
@@ -587,13 +612,13 @@ Class2Modem::class2Cmd(const fxStr& cmd, int a0, ATResponse r, long ms)
  * Send <cmd>=<t.30 parameters> and wait response.
  */
 bool
-Class2Modem::class2Cmd(const fxStr& cmd, const Class2Params& p, ATResponse r, long ms)
+Class2Modem::class2Cmd(const fxStr& cmd, const Class2Params& p, bool isDCC, ATResponse r, long ms)
 {
     bool ecm20 = false;
     if (conf.class2ECMType == ClassModem::ECMTYPE_CLASS20 ||
        (conf.class2ECMType == ClassModem::ECMTYPE_UNSET && serviceType != SERVICE_CLASS2))
 	ecm20 = true;
-    return atCmd(cmd | "=" | p.cmd(conf.class2UseHex, ecm20), r, ms);
+    return atCmd(cmd | "=" | p.cmd(conf.class2UseHex, ecm20, (isDCC && useExtendedDF)), r, ms);
 }
 
 /*
@@ -624,7 +649,24 @@ Class2Modem::parseRange(const char* cp, Class2Params& p)
     p.br &= BR_ALL;
     p.wd &= WD_ALL;
     p.ln &= LN_ALL;
-    p.df &= DF_ALL;
+    if ((p.df & 0x10) && (p.df & 0x100)) {	// supports JBIG via T.32-A1 extension
+	/*
+	 * Old T.32 Table 21 does not provide for JBIG data formats.
+	 * In amendment 1 the ITU has extended the DF parameter to include JBIG by 
+	 * assigning "4" to JBIG L0 and "8" to JBIG.  The +FCC response for DF may  
+	 * look like (00-0F) or possibly even (00-01,03-05,07-09,0B-0D,0F).  However, 
+	 * in so doing the ITU has also changed the DF parameter (in +FIS and +FCS 
+	 * responses) into a bitmap.  Yet, an +FCC response for DF of "(5DDD)" or "(0F)" 
+	 * is not backwards-compatible with older T.32.  So the +FCC response is in 
+	 * this backwards-compatible presentation (00-0F), and +FCS and +FIS responses 
+	 * are not.
+	 */
+	useExtendedDF = true;
+	// No Class 2 modem is known to actually *work* with JBIG yet.
+	//p.df = BIT(DF_1DMH) | BIT(DF_2DMR) | BIT(DF_2DMMR) | BIT(DF_JBIG);
+	p.df = BIT(DF_1DMH) | BIT(DF_2DMR) | BIT(DF_2DMMR);
+    } else
+	p.df &= DF_ALL;
     p.ec &= EC_ALL;
     p.bf &= BF_ALL;
     p.st &= ST_ALL;
